[gd_scene load_steps=2 format=2]

[ext_resource path="res://Misc/InWallChecker.gd" type="Script" id=1]

[node name="InWallChecker" type="Node2D"]
script = ExtResource( 1 )

[node name="InWallCheckerLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 8 )

[node name="InWallCheckerRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 8 )
